--- a/pages/index.scss
+++ b/pages/index.scss
@@ -1,3 +1,45 @@
 body {
     background: #F5F5F5 !important;
 }
+
+.social-log-buttons {
+    width: 75%;
+    margin-top: 20px;
+
+    .google-comps {
+        width: 50%;
+
+        .googlelogin-btn {
+            background: #fff;
+            display: inline-block !important;
+            color: #333 !important;
+            padding: 8px;
+            width: calc(50% - 3px);
+            margin-right: 3px;
+            border: 1px solid #ccc !important;
+            border-radius: 10px !important;
+            box-shadow: none !important;
+            text-align: center;
+            font-size: 14px;
+            transition: all 0.3s linear;
+            outline: none;
+            font-family: var(--font-family);
+
+            .googleicon-login {
+                width: 23px;
+                height: auto;
+                margin-right: 10px;
+            }
+
+            &:hover {
+                box-shadow: 0px 0px 8px #ccc !important;
+            }
+        }
+    }
+}
+
+.common-loader {
+    position: absolute;
+    top: 40%;
+    left: 48%
+}
