--- a/pages/index.scss
+++ b/pages/index.scss
@@ -1,5 +1,5 @@
 body {
-    background: #F5F5F5 !important;
+    background: #f0f2f5 !important;
 }
 
 .social-log-buttons {
@@ -43,3 +43,4 @@ body {
     top: 40%;
     left: 48%
 }
+
