--- a/pages/index.scss
+++ b/pages/index.scss
@@ -3,37 +3,39 @@ body {
 }
 
 .social-log-buttons {
-    width: 75%;
-    margin-top: 20px;
+    width: 70%;
+    margin-left: 29%;
 
     .google-comps {
         width: 50%;
 
         .googlelogin-btn {
             background: #fff;
-            display: inline-block !important;
             color: #333 !important;
-            padding: 8px;
-            width: calc(50% - 3px);
-            margin-right: 3px;
+            padding: 12px;
+            width: calc(42% - 3px);
+            margin-left: 10%;
             border: 1px solid #ccc !important;
-            border-radius: 10px !important;
-            box-shadow: none !important;
-            text-align: center;
-            font-size: 14px;
+            border-radius: 20px !important;
+            font-size: 22px;
             transition: all 0.3s linear;
-            outline: none;
-            font-family: var(--font-family);
+            cursor: pointer;
 
             .googleicon-login {
-                width: 23px;
+                width: 34px;
                 height: auto;
                 margin-right: 10px;
+                margin-bottom: 5px;
+
+                &:hover {
+                    transform: rotateY(180deg);
+                }
             }
 
             &:hover {
-                box-shadow: 0px 0px 8px #ccc !important;
+                box-shadow: 0px 0px 20px #ccc !important;
             }
+
         }
     }
 }
@@ -44,3 +46,77 @@ body {
     left: 48%
 }
 
+.sign-up-login {
+    letter-spacing: 0.54px;
+    font-size: 25px;
+    color: blue;
+    text-align: center;
+    font-weight: '900';
+    margin-bottom: 25px;
+    margin-top: 19%;
+    margin-right: 39%;
+}
+
+.enter-details {
+    letter-spacing: 0.54px;
+    font-size: 25px;
+    color: blue;
+    text-align: center;
+    font-weight: '900';
+    margin-bottom: 25px;
+    margin-top: 16%;
+    margin-right: 42%;
+}
+
+
+.signup-container-top {
+    margin-top: 20vh;
+}
+
+.sign-up-row {
+    margin-top: 16px;
+
+    .sign-up-form {
+        width: 64% !important;
+
+        Input,
+        Input:hover,
+        Input:focus {
+            width: 90%;
+            height: 48px;
+            border-color: #dcdcdc;
+            border-radius: 10px;
+            box-shadow: none;
+        }
+
+        .ant-btn {
+            width: 50%;
+            height: 50px;
+            background: blue 0% 0% no-repeat padding-box;
+            border-radius: 15px;
+            color: #ffffff;
+            font-size: 14px;
+            border-color: blue;
+            margin-left: 19%;
+        }
+
+        .ant-btn:hover {
+            width: 60%;
+            margin-left: 14%;
+            background: #ffffff 0% 0% no-repeat padding-box;
+            color: blue;
+            border-color: blue;
+        }
+
+        .ant-btn:focus {
+            width: 60%;
+            margin-left: 14%;
+            height: 50px;
+            background: blue 0% 0% no-repeat padding-box;
+            border-radius: 15px;
+            color: #ffffff;
+            font-size: 14px;
+            border-color: blue;
+        }
+    }
+}
