--- a/pages/index.scss
+++ b/pages/index.scss
@@ -44,3 +44,28 @@ body {
     left: 48%
 }
 
+.ant-layout-sider-children{
+    background-color: #f0f2f5;
+    height: 80vh !important;
+    margin-top: 20px;
+}
+
+.ant-layout-header{
+    height: 10vh !important;
+}
+
+.ant-layout-footer{
+    height: 10vh !important;
+    background-color: red;
+}
+
+.layout-body{
+
+}
+.ant-layout-sider {
+    background-color: #f0f2f5;
+}
+
+.ql-editor {
+    min-height: 350px;
+}
